--- a/bin/public/leeui/ui/leeui.less
+++ b/bin/public/leeui/ui/leeui.less
@@ -1,3 +1,13 @@
 *,*:before,*:after{
   -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box;
 }
+
+html{
+  /*10.0 / 16 * 100% = 62.5%*/
+  font-size: 62.5%;
+}
+
+body{
+  /*1.4 * 10 = 14px*/
+  font-size: 1.4rem;
+}
