--- a/bin/templates/layout/default.html
+++ b/bin/templates/layout/default.html
@@ -8,5 +8,6 @@
     {{yield}}
 </section>
 {{template "FOOTER"}}
+<script type="text/javascript" src="/leeui/action/extra/a.js"></script>
 </body>
 </html>
