--- a/bin/templates/tmpls/head.html
+++ b/bin/templates/tmpls/head.html
@@ -22,5 +22,7 @@
     <meta name="msapplication-TileColor" content="#492c14">
     <meta name="msapplication-TileImage" content="/favicons/mstile-144x144.png">
     <meta name="theme-color" content="#ffffff">
+
+    <link rel="stylesheet" media="all" href="/leeui/leeui.build.css">
 </head>
 {{end}}
