添加组件化

--- a/bin/templates/layout/default.html
+++ b/bin/templates/layout/default.html
@@ -8,6 +8,9 @@
     {{yield}}
 </section>
 {{template "FOOTER"}}
+<script type="text/javascript" src="/bower_components/jquery/dist/jquery.js"></script>
+<script type="text/javascript" src="/bower_components/gsap/src/uncompressed/TweenMax.js"></script>
+<script type="text/javascript" src="/leeui/action/effect/ripples.js"></script>
 <script type="text/javascript" src="/leeui/action/extra/a.js"></script>
 </body>
 </html>
