--- a/bin/templates/tmpls/head.html
+++ b/bin/templates/tmpls/head.html
@@ -23,6 +23,8 @@
     <meta name="msapplication-TileImage" content="/favicons/mstile-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
+    <link rel="stylesheet" media="all" href="/bower_components/normalize-css/normalize.css">
     <link rel="stylesheet" media="all" href="/leeui/leeui.build.css">
+    <link rel="stylesheet" media="all" href="/leeui/ui/component/ripple-button.css">
 </head>
 {{end}}
