--- a/bin/templates/index.html
+++ b/bin/templates/index.html
@@ -4,3 +4,25 @@ hello world!
 <a>A Element!</a>
 <br>
 <a href="#">A Element!</a>
+
+
+<!-- SVG Sprite -->
+<div style="height: 0; width: 0; position: absolute; visibility: hidden;" aria-hidden="true">
+    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" focusable="false">
+        <symbol id="ripply-scott" viewBox="0 0 100 100">
+            <circle id="ripple-shape" cx="1" cy="1" r="1" />
+        </symbol>
+    </svg>
+</div>
+<!-- /end sprite -->
+
+<!-- button component -->
+<button type="button" id="js-ripple-btn" class="button styl-material">
+    Click for Ripple
+    <svg class="ripple-obj" id="js-ripple">
+        <symbol id="ripply-scott" viewBox="0 0 100 100">
+            <circle id="ripple-shape" cx="1" cy="1" r="1" ></circle>
+        </symbol>
+    </svg>
+</button>
+<!-- /end button component -->
