add echo and render

--- a/bin/templates/index.html
+++ b/bin/templates/index.html
@@ -20,9 +20,7 @@ hello world!
 <button type="button" id="js-ripple-btn" class="button styl-material">
     Click for Ripple
     <svg class="ripple-obj" id="js-ripple">
-        <symbol id="ripply-scott" viewBox="0 0 100 100">
-            <circle id="ripple-shape" cx="1" cy="1" r="1" ></circle>
-        </symbol>
+        <use width="100" height="100" xlink:href="#ripply-scott" class="js-ripple"></use>
     </svg>
 </button>
 <!-- /end button component -->
