--- a/bin/templates/chat/im.html
+++ b/bin/templates/chat/im.html
@@ -1,10 +1,4 @@
-<head>
-    <meta charset="utf-8">
-    <title>WebSocket</title>
-</head>
-
-<body>
-<p id="output"></p>
+﻿<p id="output"></p>
 
 <script>
     var loc = window.location;
@@ -14,7 +8,7 @@
         uri = 'wss:';
     }
     uri += '//' + loc.host;
-    uri += loc.pathname + 'ws';
+    uri +=  '/ws';
 
     ws = new WebSocket(uri);
 
@@ -31,6 +25,3 @@
         ws.send('Hello, Server!');
     }, 1000);
 </script>
-</body>
-
-</html>
